--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 * {
   font-family: "Poppins", sans-serif;
 }
+body{
+  background-color: black;
+  color: white;
+}
 h1 {
   margin-top: 200px;
 }
