--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ button {
   border-radius: 40px;
   width: 200px;
 }
+a{
+  color: white;
+}
 footer{
       margin-top: 80px;
       text-align: center;
