--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@ body{
   color: white;
 }
 h1 {
-  margin-top: 200px;
+  margin-top: 80px;
+  
+}
+h2{
+  margin-top: 60px;
 }
 #firstNum,
 #secondNum {
@@ -21,23 +25,35 @@ h1 {
 button {
   margin-top: 40px;
   background-color: blue;
+  margin-left: 10px;
+  margin-right: 10px;
   color: white;
   border: 0px;
-  height: 40px;
+  height: 60px;
   border-radius: 40px;
   width: 200px;
+  cursor: pointer;
 }
 a{
   color: white;
 }
 footer{
-      margin-top: 80px;
+      margin-top: 60px;
       text-align: center;
 }
 @media screen and (max-width: 478px) {
+  
   * {
     margin: 0px;
     padding: 0px;
+  }
+  h1{
+    margin-top: 100px;
+    text-align: center;
+  }
+
+  .Follow{
+    margin-top: 80px;
   }
   #firstNum, #secondNum {
       width: 60%;
@@ -49,6 +65,12 @@ footer{
   }
   footer{
       text-align: center;
-      margin-top: 60px;
+      margin-top: 40px;
+  }
+  .btn{
+    display: flex;
+  }
+  button{
+    width: 150px;
   }
 }
